--- a/templates/start.html
+++ b/templates/start.html
@@ -7,5 +7,7 @@
 {% block content %}
 <h1>{{ title }}</h1>
 <p>{{ instructions }}</p>
-<a href="/questions/0" class="btn btn-primary">Start Survey</a>
+<form action="/begin" method="POST">
+    <button type="submit" class="btn btn-primary">Start Survey</button>
+</form>
 {% endblock %}
